--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,7 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
+      - run: flutter format --set-exit-if-changed
       - run: flutter test
       - run: flutter build apk --debug --split-per-abi
       - name: Create a Release APK
