--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,7 @@
-on: push
+on:
+  push:
+    branches:
+      - main
 name: Test, Build and Release apk
 jobs:
   build:
@@ -13,7 +16,7 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
-      - run: flutter format --set-exit-if-changed
+      - run: flutter format
       - run: flutter test
       - run: flutter build apk --debug --split-per-abi
       - name: Create a Release APK
