--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,8 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
-      - run: flutter format
+      - name: Verify formatting
+        run: flutter format --output=none --set-exit-if-changed
       - run: flutter test
       - run: flutter build apk --debug --split-per-abi
       - name: Create a Release APK
