--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
           flutter-version: '1.22.4'
       - run: flutter pub get
       - name: Verify formatting
-        run: flutter format --output=none --set-exit-if-changed
+        run: flutter format -n --dry-run
       - run: flutter test
       - run: flutter build apk --debug --split-per-abi
       - name: Create a Release APK
