--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,10 +13,12 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
+      - run: dart format --output=none --set-exit-if-changed
+      - run: dart analyze
       - run: flutter test
-      - run: flutter build apk --debug --split-per-abi
-      - name: Create a Release APK
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/debug/*.apk"
-          token: ${{ secrets.TOKEN }}
+#      - run: flutter build apk --debug --split-per-abi
+#      - name: Create a Release APK
+#        uses: ncipollo/release-action@v1
+#        with:
+#          artifacts: "build/app/outputs/apk/debug/*.apk"
+#          token: ${{ secrets.TOKEN }}
