--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,12 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-#       - uses: actions/setup-java@v1
-#         with:
-#           java-version: '12.x'
-#       - uses: subosito/flutter-action@v1
-#         with:
-#           flutter-version: '1.22.4'
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '1.22.4'
       - run: flutter pub get
       - run: flutter dartfmt -n lib
       - run: flutter format  lib
