--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,7 @@
+name: Run analyze and tests
 on: push
-name: Flutter CI-CD
 jobs:
-  build:
-    name: Build APK
+  analyze-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -11,14 +10,8 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '1.22.4'
+          channel: 'stable'
       - run: flutter pub get
-      - run: dart format --output=none --set-exit-if-changed
-      - run: dart analyze
+      - run: flutter build aot
+      - run: flutter analyze
       - run: flutter test
-#      - run: flutter build apk --debug --split-per-abi
-#      - name: Create a Release APK
-#        uses: ncipollo/release-action@v1
-#        with:
-#          artifacts: "build/app/outputs/apk/debug/*.apk"
-#          token: ${{ secrets.TOKEN }}
